Fixed z-indexes to the dragging country be in the front

--- a/_em/css/erik_hra.scss
+++ b/_em/css/erik_hra.scss
@@ -51,4 +51,7 @@ body {
     @media (min-width: 768px) {
         min-height: 300px;
     }
+    img {
+        z-index: 10;
+    }
 }
